2025-06-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.3-9-1  (r421)
	* tests/*.Rout.save: adapt to latest "typical outputs"

2024-12-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/multi-constr.{R,Rout.save}: more tweaks for new (quantreg?!)
	behaviour.  Release 1.3-9

2024-11-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* README.md: instead of `README`
	* R/scobs.R, R/qbsks.R (cobs, qbsks2): add `rq.print.warn` argument
	to `cobs()` and `qbsks2()`

2024-10-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/ex2-long.R  amend for R-devel (Fedora 36 BDR)

2024-07-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.3-9  (r413);  now has `Authors@R`

2024-03-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/multi-constr.{R,Rout.save}: tweaks for 'noLD', 'MKL', 'openBLAS', ..

2024-02-24  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.3-8  (r405)
	* R/l1Design.R, ..: partially matched args: use seq_along(); seq(..., length.out=.)
2024-02-01  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/scobs.R (cut00): no longer use is.R()
	* tests/multi-constr.{R,Rout.save}: use some stopifnot(); tweaks for M1
	* DESCRIPTION (Version): 1.3-7  (r403)

2023-10-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.3-6; update URLs

2022-05-31  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/*.Rd: fix \ escapes

2022-05-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/*.c: use R_alloc(); declare Sint ourselves (r385)
	* DESCRIPTION (Version): 1.3-5

2020-01-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/0_pt-ex.R: move duplicates, as has no *.Rout.save (373)

	* tests/*.R;Rout.save: updates, tweaks
	* DESCRIPTION (Version): 1.3-4

2017-03-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/concaveRegr.R (conreg): include the former unexported SR() as
	conreg(*, method = "SR").  Add `verbose` option.
