@@ -1,7 +1,7 @@
 Package: cobs
 Version: 1.3-9-1
 VersionNote: Released 1.3-9 on 2024-12-17; 1.3-8 on 2024-03-05; 1.3-7 on 2024-02-03
-Date: 2025-06-30
+Date: 2025-07-01
 Title: Constrained B-Splines (Sparse Matrix Based)
 Description: Qualitatively Constrained (Regression) Smoothing Splines via
         Linear Programming and Sparse Matrices.
