@@ -1,3 +1,7 @@
+2025-07-01  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* src/nrutil.h: against `-Wunused`: rm unused macros w/ static vars
+
 2025-06-30  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* DESCRIPTION (Version): 1.3-9-1  (r421)
